--- a/.gitignore
+++ b/.gitignore
@@ -34,14 +34,22 @@ captures/
 
 # Intellij
 *.iml
+*.iws
+.idea/vcs.xml
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
 .idea/dictionaries
 .idea/libraries
+.idea/compiler.xml
+.idea/misc.xml
+.idea/runConfigurations.xml
+
+
 
 # Keystore files
 *.jks
+*.keystore
 
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
@@ -53,3 +61,13 @@ google-services.json
 freeline.py
 freeline/
 freeline_project_description.json
+
+#passwords
+secrets.properties
+
+.DS_Store
+*.db
+*.hprof
+*workspace.xml
+captures/
+ajcore*.txt
