--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,9 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'io.fabric'
+
+
 android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -26,6 +29,10 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://maven.fabric.io/public" }
+}
+
 dependencies {
 
     compile (group: 'co.early.asaf', name: 'asaf-ui', version: "0.9.26", ext: 'aar')
@@ -44,6 +51,11 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+        transitive = true;
+    }
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
