--- a/build.gradle
+++ b/build.gradle
@@ -5,13 +5,16 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url "https://maven.fabric.io/public" }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // We recommend changing it to the latest version from our changelog:
+        // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
+        classpath 'io.fabric.tools:gradle:1.+'
+
     }
 }
 
@@ -21,9 +24,7 @@ allprojects {
         jcenter()
 
         repositories {
-            maven {
-                url  "https://dl.bintray.com/erdo/pwned"
-            }
+            maven { url "https://dl.bintray.com/erdo/pwned" }
         }
     }
 }
