--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,17 +12,34 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    compileSdkVersion 26
+
+    compileSdkVersion rootProject.ext.compileSdkVersion
+
     defaultConfig {
+
         applicationId "co.early.password123"
-        minSdkVersion 21
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.APP_VERSION_CODE as Integer
+        versionName rootProject.ext.APP_VERSION_NAME
+
+        vectorDrawables.useSupportLibrary = true
+
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
+
+    signingConfigs {
+        release {
+            storeFile file(rootProject.ext.KEYSTORE_PATH)
+            storePassword rootProject.ext.KEYSTORE_PASSWORD
+            keyAlias rootProject.ext.KEYSTORE_ALIAS
+            keyPassword rootProject.ext.KEYSTORE_PASSWORD
+        }
+    }
+
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
@@ -48,13 +65,18 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
-    implementation 'com.android.support:cardview-v7:26.1.0'
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:cardview-v7:${rootProject.ext.supportLibVersion}"
+    implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
     implementation 'com.parse:parse-android:1.15.8'
 
+
     compile('com.crashlytics.sdk.android:crashlytics:2.9.1@aar') {
+        transitive = true;
+    }
+
+    compile('com.crashlytics.sdk.android:answers:1.4.1@aar') {
         transitive = true;
     }
 
