cleaner kotlin code

--- a/.gitignore
+++ b/.gitignore
@@ -39,13 +39,13 @@ captures/
 .idea/workspace.xml
 .idea/tasks.xml
 .idea/gradle.xml
-.idea/dictionaries
-.idea/libraries
+.idea/assetWizardSettings.xml
 .idea/compiler.xml
 .idea/misc.xml
 .idea/runConfigurations.xml
-
-
+.idea/dictionaries
+.idea/libraries
+.idea/caches
 
 # Keystore files
 *.jks
@@ -62,12 +62,24 @@ freeline.py
 freeline/
 freeline_project_description.json
 
+# fastlane
+fastlane/report.xml
+fastlane/Preview.html
+fastlane/screenshots
+fastlane/test_output
+fastlane/readme.md
+
 #passwords
 secrets.properties
 
 .DS_Store
 *.db
 *.hprof
-*workspace.xml
 captures/
 ajcore*.txt
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
